--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/paragraph/paragraph--inline-hero.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/paragraph/paragraph--inline-hero.html.twig
@@ -57,6 +57,7 @@
       .addClass(overlay == 1 ? 'hero--overlay'),
     'media': media,
     'media_image': media_image,
+    'dynamic_height': dynamic_height,
     'position': position,
     'text': content.field_text,
     'cta': content.field_cta,
