--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/theme/theme-primary.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/theme/theme-primary.css
@@ -6,8 +6,8 @@
 .theme-primary {
   --theme-background-color: var(--color-primary);
   --theme-color: var(--color-white);
-  --theme-button-background-color: var(--color-white);
-  --theme-button-color: var(--color-primary);
+  --theme-button-background-color: var(--color-pink);
+  --theme-button-color: var(--color-purple);
   --theme-link-color: var(--color-white);
   --theme-divider-background-color: var(--color-white);
   --theme-accordion-border-color: var(--color-primary);
