--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/region/region--header.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/region/region--header.html.twig
@@ -23,7 +23,6 @@
   <div class="meta-menu">
     <div class="container">
       <div class="meta-menu__inner">
-        {{ elements.languageswitcher }}
         {{ elements.metamenu }}
       </div>
     </div>
@@ -40,12 +39,22 @@
         </div>
         <div class="burger__label">{{ 'Menu'|t }}</div>
       </div>
-      <div class="search-toggle js-search-toggle">
-        {% include '@reusable-component/svg-icon.twig' with {
-          'attributes': '',
-          'svgIconName': 'search'
-        } %}
-        {{ 'Search'|t }}
+      <div class="header-search js-header-search">
+        <form action="/search" method="get">
+          <div class="header-search__input-field">
+            <input {{ create_attribute().addClass('input')
+              .setAttribute('type', 'search').setAttribute('aria-label', 'Search'|t)
+              .setAttribute('placeholder', 'Search the entire site'|t)
+              .setAttribute('name', 'keys')
+              .setAttribute('id', 'js-header-search-input') }}>
+            <button {{ create_attribute().setAttribute('type', 'submit').addClass('header-search__submit') }}>
+              {% include '@reusable-component/svg-icon.twig' with {
+                'attributes': '',
+                'svgIconName': 'search'
+              } %}
+            </button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
