Style and theme changes to meta-menu, burger icon and navigation

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/burger.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/burger.css
@@ -13,16 +13,16 @@
   cursor: pointer;
 
   @media (--viewport-md-min) {
-    margin-left: 20px;
+    display: none;
   }
 
   &__lines {
     > span {
       display: block;
-      width: 40px;
-      height: 1px;
-      margin-bottom: 10px;
-      background-color: var(--color-primary);
+      width: 25px;
+      height: 2px;
+      margin-bottom: 5px;
+      background-color: var(--color-white);
 
       &:last-of-type {
         margin-bottom: 0;
