--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/meta-menu.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/meta-menu.css
@@ -5,7 +5,7 @@
 
 .meta-menu {
   display: none;
-  background-color: var(--color-gray-light);
+  background-color: var(--color-blue-light);
 
   @media (--viewport-md-min) {
     display: block;
@@ -28,15 +28,16 @@
 }
 
 .meta-menu-item {
-  margin-right: 35px;
+  margin-right: 30px;
 
   &:last-of-type {
     margin-right: 0;
   }
 
   &__link {
-    color: var(--color-primary);
-    font-size: var(--base-font-size);
+    color: var(--color-purple);
+    font-weight: 400;
+    font-size: var(--base-font-size-small);
     line-height: 1.3;
     text-decoration: none;
 
