--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/navigation.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/navigation.css
@@ -25,7 +25,7 @@
   cursor: pointer;
 
   @media (--viewport-lg-min) {
-    margin: 0 20px;
+    margin: 0 15px;
   }
 
   .icon--arrow-line-down {
@@ -38,7 +38,7 @@
 
   &.active {
     .navigation-item__link {
-      color: var(--color-primary);
+      color: var(--color-white);
 
       &::after {
         opacity: 1;
@@ -70,8 +70,9 @@
 
   &__link {
     position: relative;
-    color: currentcolor;
-    font-weight: 500;
+    color: var(--color-white);
+    font-weight: 700;
+    font-family: var(--heading-font-family);
     text-decoration: none;
 
     &::after {
