Changes to color themes

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/theme/theme-green.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/theme/theme-green.css
@@ -4,13 +4,13 @@
  */
 
 .theme-green {
-  --theme-background-color: #1fc8a9;
-  --theme-color: #ffefe5;
-  --theme-button-background-color: #ffefe5;
-  --theme-button-color: #1fc8a9;
+  --theme-background-color: var(--color-green);
+  --theme-color: #fff;
+  --theme-button-background-color: #fff;
+  --theme-button-color: var(--color-green);
   --theme-link-color: #ffefe5;
   --theme-divider-background-color: #ffefe5;
-  --theme-accordion-border-color: #1fc8a9;
+  --theme-accordion-border-color: #232323;
   --theme-accordion-background-color: var(--color-white);
   --theme-accordion-text-color: var(--color-black);
   --theme-input-border: #ffefe5;
