Added footer bottom markup + styling

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/layout/page.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/layout/page.html.twig
@@ -91,8 +91,7 @@
 
     <footer class="footer">
       <div{{ create_attribute().addClass(['footer__inner', 'section', 'theme', 'theme-green']) }}>
-        <svg class="section__graphics-top" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-       viewBox="0 0 1440 30" xml:space="preserve">
+        <svg class="section__graphics-top" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1440 30" xml:space="preserve">
           <path d="M1440,30V1.3l-240.4,12.3L950.4,0L939,9l-22.9-2.9L801.7,16.5l-625.5-2.9L164.8,3l-87.7,7.5L0,1.3V30H1440z"/>
         </svg>
         <div class="container">
@@ -108,6 +107,25 @@
                 </div>
               {% endfor %}
             {% endif %}
+          </div>
+        </div>
+      </div>
+      <div{{ create_attribute().addClass('footer__bottom') }}>
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-md-4 footer__bottom-logo">
+              <a class="logo" href="/" title="Hjem" rel="home">
+                <img class="logo__image" src="/{{ directory }}/logo.svg" alt="Hjem">
+              </a>
+            </div>
+            <div class="col-xs-12 col-md-4 footer__bottom-address">
+              Ledreborg Alle 2A, 4320 Lejre
+            </div>
+            <div class="col-xs-12 col-md-4 footer__bottom-links">
+              {% block footerbottom %}
+                {{ page.footerbottom }}
+              {% endblock %}
+            </div>
           </div>
         </div>
       </div>
