Fix layout--onecol.html.twig indentation

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/layouts/onecol/layout--onecol.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/layouts/onecol/layout--onecol.html.twig
@@ -27,8 +27,7 @@
 
 <section {{ attributes.addClass(classes) }}>
   {% if settings.column_show_graphic_top %}
-    <svg class="section__graphics-top" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 1440 30" xml:space="preserve">
+    <svg class="section__graphics-top" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1440 30" xml:space="preserve">
       <path d="M1440,30V1.3l-240.4,12.3L950.4,0L939,9l-22.9-2.9L801.7,16.5l-625.5-2.9L164.8,3l-87.7,7.5L0,1.3V30H1440z"/>
     </svg>
   {% endif %}
@@ -67,8 +66,7 @@
     </div>
   {% endif %}
   {% if settings.column_show_graphic_top %}
-    <svg class="section__graphics-bottom" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 1440 30" xml:space="preserve">
+    <svg class="section__graphics-bottom" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1440 30" xml:space="preserve">
       <path d="M0,0v16.1l80.3,0.8l93.7,2.9l6.8-4.6l354.6,10.7l44.1,4.1l349.8-12.4l9.8,4.1l11.4-6.6l249.2,9.9l240.3-9.1V0H0z"/>
     </svg>
   {% endif %}
