--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/footer.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/footer.css
@@ -24,6 +24,13 @@
       align-self: center;
     }
 
+    &-logo {
+      .logo__image {
+        height: 41px;
+        margin: 0;
+      }
+    }
+
     &-address {
       text-align: center;
     }
