--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/theme/theme-pink.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/theme/theme-pink.css
@@ -4,7 +4,7 @@
  */
 
 .theme-pink {
-  --theme-background-color: var(--color-pink);
+  --theme-background-color: var(--color-cherry);
   --theme-color: var(--color-purple);
   --theme-button-background-color: var(--color-green-dark);
   --theme-button-color: #fff;
