Layout builder modal changes: added z-index 10 to add section + changed label to display table

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/modal.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/modal.css
@@ -36,3 +36,12 @@
     }
   }
 }
+
+.layout-builder .layout-builder__add-section {
+  z-index: 10;
+}
+
+#layout-builder-modal .form-composite > legend,
+#layout-builder-modal .label {
+  display: table;
+}
