--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/appetiser.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/appetiser.css
@@ -21,12 +21,6 @@
     object-fit: cover;
   }
 
-  &:not(.appetiser--small) {
-    @media (--viewport-md-min) {
-      min-height: 570px;
-    }
-  }
-
   &__content-wrapper {
     display: flex;
     align-items: center;
@@ -45,10 +39,8 @@
     @media (--viewport-md-min) {
       flex-grow: 0;
       flex-shrink: 1;
-      width: 50%;
-      height: 100%;
-      padding-top: 0;
-      padding-bottom: 0;
+      padding-top: 100px;
+      padding-bottom: 100px;
     }
   }
 
@@ -64,26 +56,37 @@
     line-height: 1.3;
   }
 
+  &__image-wrapper {
+    position: relative;
+    width: 100%;
+    padding-bottom: 50px;
+
+    @media (--viewport-sm-min) {
+      padding-bottom: 0;
+
+      .appetiser--image-overflow & {
+        margin-top: -100px;
+        margin-bottom: -100px;
+      }
+    }
+  }
+
   &__image {
     width: 100%;
     height: 100%;
 
-    &::before {
-      float: left;
-      padding-top: 56.25%;
-      content: "";
+    & > div {
+      height: 100%;
     }
 
-    @media (--viewport-md-min) {
-      position: absolute;
-      top: 0;
-      right: 0;
-      width: 50%;
-      max-height: 570px;
+    .section--place-top & {
+      z-index: 5;
+    }
 
-      &::before {
-        display: none;
-      }
+    @media (--viewport-sm-min) {
+      position: relative;
+      top: 50%;
+      transform: translateY(-50%);
     }
   }
 
@@ -96,12 +99,6 @@
       width: 100%;
       height: auto;
       margin-bottom: 25px;
-
-      &::before {
-        float: left;
-        padding-top: 56.25%;
-        content: "";
-      }
     }
 
     .appetiser__content {
@@ -111,25 +108,25 @@
   }
 
   &--image-left {
-    .appetiser__image {
-      right: auto;
-      left: 0;
-      order: -1;
-    }
+    @media (--viewport-md-min) {
+      .appetiser__image-wrapper {
+        order: 1;
+      }
 
-    .appetiser__content {
-      @media (--viewport-md-min) {
-        margin-left: 50%;
-        padding-left: 100px;
+      .appetiser__content {
+        order: 2;
       }
     }
   }
 
   &--image-right {
-    .appetiser__content {
-      @media (--viewport-md-min) {
-        margin-right: 50%;
-        padding-right: 100px;
+    @media (--viewport-md-min) {
+      .appetiser__image-wrapper {
+        order: 2;
+      }
+
+      .appetiser__content {
+        order: 1;
       }
     }
   }
