--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/footer.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/footer.css
@@ -7,6 +7,12 @@
   position: relative;
   z-index: 3;
 
+  &__graphic {
+    width: 100%;
+    height: auto;
+    margin-bottom: -20px;
+  }
+
   &__inner {
     position: relative;
   }
