SIS2-13: Changes to color themes

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/theme/theme-primary.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/theme/theme-primary.css
@@ -6,7 +6,7 @@
 .theme-primary {
   --theme-background-color: var(--color-primary);
   --theme-color: var(--color-white);
-  --theme-button-background-color: var(--color-cherry);
+  --theme-button-background-color: var(--color-pink);
   --theme-button-color: var(--color-purple);
   --theme-link-color: var(--color-white);
   --theme-divider-background-color: var(--color-white);
