--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/layouts/onecol/layout--onecol.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/layouts/onecol/layout--onecol.html.twig
@@ -18,7 +18,7 @@
   'section',
   'section--spacing-top-' ~ settings.column_spacing_top,
   'section--spacing-bottom-' ~ settings.column_spacing_bottom,
-  settings.color_theme ? 'section--place-top',
+  settings.color_theme ? 'section--place-top'
 ] %}
 
 {% if settings.color_theme is not empty %}
