--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/layouts/threecol_section/layout--threecol-section.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/layouts/threecol_section/layout--threecol-section.html.twig
@@ -17,7 +17,8 @@
   settings.color_theme != '' ? 'theme ' ~ settings.color_theme,
   'section',
   'section--spacing-top-' ~ settings.column_spacing_top,
-  'section--spacing-bottom-' ~ settings.column_spacing_bottom
+  'section--spacing-bottom-' ~ settings.column_spacing_bottom,
+  settings.color_theme ? 'section--place-top'
 ] %}
 
 {% if settings.color_theme is not empty %}
@@ -25,6 +26,11 @@
 {% endif %}
 
 <section {{ attributes.addClass(classes) }}>
+  {% if settings.color_theme %}
+    <svg class="section__graphics-top" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1440 30" xml:space="preserve">
+      <path d="M1440,30V1.3l-240.4,12.3L950.4,0L939,9l-22.9-2.9L801.7,16.5l-625.5-2.9L164.8,3l-87.7,7.5L0,1.3V30H1440z"/>
+    </svg>
+  {% endif %}
   <div class="container">
     {% if header and header is not empty %}
     <div class="row">
@@ -45,4 +51,9 @@
       </div>
     </div>
   </div>
+  {% if settings.color_theme %}
+    <svg class="section__graphics-bottom" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1440 30" xml:space="preserve">
+      <path d="M0,0v16.1l80.3,0.8l93.7,2.9l6.8-4.6l354.6,10.7l44.1,4.1l349.8-12.4l9.8,4.1l11.4-6.6l249.2,9.9l240.3-9.1V0H0z"/>
+    </svg>
+  {% endif %}
 </section>
