SIS2-18: Added bottom graphics to page header

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/hero.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/hero.css
@@ -147,4 +147,20 @@
       max-height: none;
     }
   }
+
+  .section__graphics-bottom {
+    display: none;
+  }
+}
+
+#block-pageheader .hero {
+  .section__graphics-bottom {
+    top: auto;
+    bottom: -.1%;
+    display: block;
+
+    & path {
+      fill: #fff;
+    }
+  }
 }
