--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/twig/03-organisms/hero.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/twig/03-organisms/hero.twig
@@ -25,7 +25,9 @@
             <h1>{{ title }}</h1>
           {% endif %}
           {% if text %}
-            {{ text }}
+            <div class="hero__content-text">
+              {{ text }}
+            </div>
           {% endif %}
           {% block cta %}
             {{ cta }}
