SIS2-13: Color theme changes

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/variables.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/variables.css
@@ -15,18 +15,18 @@
   --color-gray-dark-1: #232323;
   --color-error: #f00;
   --color-red: #c70f46;
-  --color-pink: #f5bac7;
-  --color-cherry: #fbdace;
+  --color-pink: #f2cbce;
+  --color-pink-light: #fbdace;
   --color-purple: #3d2859;
   --color-purple-dark: #1f0640;
-  --color-blue: #00687f;
+  --color-blue: #408e9f;
   --color-blue-ice: #85cddb;
   --color-blue-light: #f2fafc;
   --color-yellow: #ffce42;
+  --color-yellow-light: #ffe6a0;
   --color-yellow-dark: #f2b300;
   --color-orange: #f69e4b;
   --color-orange-dark: #e08a39;
-  --color-sand: #ffe6a0;
   --color-green: #008c5d;
   --color-green-dark: #1c6153;
 
