--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/theme/theme-pink.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/theme/theme-pink.css
@@ -1,10 +1,10 @@
 /**
  * Type: Theme.
- * Sand theme.
+ * Pink theme.
  */
 
-.theme-sand {
-  --theme-background-color: var(--color-sand);
+.theme-pink {
+  --theme-background-color: var(--color-pink-light);
   --theme-color: var(--color-purple);
   --theme-button-background-color: var(--color-green-dark);
   --theme-button-color: #fff;
