--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/theme/theme-yellow.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/theme/theme-yellow.css
@@ -4,7 +4,7 @@
  */
 
 .theme-yellow {
-  --theme-background-color: var(--color-yellow);
+  --theme-background-color: var(--color-yellow-light);
   --theme-color: var(--color-purple);
   --theme-button-background-color: var(--color-green-dark);
   --theme-button-color: #fff;
