--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/navigation.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/navigation.css
@@ -78,12 +78,13 @@
     &::after {
       position: absolute;
       top: auto;
-      bottom: -10px;
-      left: 50%;
-      width: 9px;
-      height: 9px;
-      background-color: var(--color-primary);
-      border-radius: 50px;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 10px;
+      background-image: url("../../../../../dist/images/selected-underline.svg");
+      background-repeat: no-repeat;
+      background-size: contain;
       opacity: 0;
       transition: opacity .3s;
       content: "";
