--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/navigation.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/navigation.css
@@ -79,8 +79,8 @@
       position: absolute;
       top: auto;
       bottom: 0;
-      left: 0;
-      width: 100%;
+      left: -3%;
+      width: 106%;
       height: 10px;
       background-image: url("../../../../../dist/images/selected-underline.svg");
       background-repeat: no-repeat;
