--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/sub-navigation.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/sub-navigation.css
@@ -8,7 +8,7 @@
   top: 100%;
   left: 0;
   width: 100%;
-  background-color: var(--color-white);
+  background-color: var(--color-blue-light);
   box-shadow: 0 25px 50px 0 rgb(0 0 0 / 10%);
   transform: scaleY(0);
   transform-origin: top;
@@ -16,28 +16,12 @@
   transition: all .3s;
   will-change: transform;
 
-  &::before,
-  &::after {
-    position: absolute;
-    top: 0;
-    left: -50%;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-    background-color: inherit;
-    border-top: solid 1px var(--color-gray);
-    content: "";
-  }
-
-  &::after {
-    right: -50%;
-    left: auto;
-  }
-
   &__list {
     display: flex;
+    flex-grow: 1;
     flex-wrap: wrap;
-    border-left: solid 1px var(--color-gray);
+    padding-top: 48px;
+    padding-bottom: 48px;
     transition: opacity .3s;
 
     &.fade-enter,
@@ -53,17 +37,12 @@
 
   &__item {
     display: flex;
-    flex: 1 0 calc(100% / 6);
-    align-items: center;
-    justify-content: center;
-    height: 75px;
+    flex: 1 0 calc(100% / 4);
+    padding: 20px 16px 20px 0;
     color: var(--color-primary);
     font-weight: 700;
     font-size: var(--base-font-size);
     text-decoration: none;
-    border-color: var(--color-gray);
-    border-style: solid;
-    border-width: 1px 1px 1px 0;
 
     &:nth-child(n+7) {
       flex-grow: 0;
@@ -75,8 +54,6 @@
       height: 22px;
       margin-left: 10px;
       padding: 5px;
-      border: solid 1px var(--color-primary);
-      border-radius: 50%;
       transition: transform .3s;
       will-change: transform;
       fill: var(--color-primary);
