SIS2-10: Style and theme changes to inspiration overview

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--list.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--list.html.twig
@@ -73,7 +73,7 @@
   <div class="inspiration-overview__image">
     {{ content.field_list_media }}
     <div class="inspiration-overview__type">
-      {{ content.field_article_type }}
+      {{ node.field_article_type.entity.name.value }}
     </div>
   </div>
   <div class="inspiration-overview__content">
