--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
@@ -17,10 +17,9 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    margin-bottom: 44px;
     text-decoration: none;
     background-color: #fff;
-    box-shadow: 0 4px 30px rgba(131, 131, 131, 25%);
+    box-shadow: 0 4px 30px rgb(131 131 131 / 25%);
   }
 
   &__image {
@@ -42,7 +41,7 @@
     font-weight: 800;
     font-size: var(--base-font-size-extra-small);
     font-family: var(--base-font-family);
-    background-color: var(--color-blue);
+    background-color: var(--color-primary);
   }
 
   &__content {
@@ -64,7 +63,11 @@
   }
 
   &__description {
+    display: -webkit-box; /* stylelint-disable-line */
     margin-bottom: 8px;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
     font-size: var(--base-font-size-small);
   }
 
@@ -95,4 +98,62 @@
       font-family: var(--base-font-family);
     }
   }
+
+  &__headline {
+    margin-bottom: 4px;
+    font-weight: 600;
+    font-size: var(--base-font-size-medium);
+    font-family: var(--heading-font-family);
+    line-height: 1.3;
+  }
+
+  &__list {
+    margin: 0;
+    padding: 0;
+  }
+
+  &__list-item {
+    line-height: 1.3;
+    list-style-type: none;
+    border-bottom: 1px solid var(--color-pink);
+  }
+
+  &__list-item-link {
+    display: inline-block;
+    padding: 8px 0;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
+  &__more-link {
+    position: relative;
+    display: inline-block;
+    padding-top: 8px;
+    padding-right: 24px;
+    padding-bottom: 8px;
+
+    .icon {
+      position: absolute;
+      top: 50%;
+      right: 0;
+      width: 16px;
+      height: 12px;
+      transform: translateY(-50%);
+      transition: right .3s ease;
+      fill: var(--color-purple);
+    }
+
+    &:hover {
+      .icon {
+        right: -5px;
+      }
+    }
+  }
+}
+
+.inspiration-overview__item-link + .inspiration-overview__list-links {
+  margin-top: 44px;
 }
