--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
@@ -1,12 +1,39 @@
 .inspiration-overview {
-  &__item {
-    display: flex;
-    flex-direction: column;
-    width: 25%;
+  &__intro {
+    margin-bottom: 32px;
     padding-right: var(--container-spacing-mobile);
     padding-left: var(--container-spacing-mobile);
 
     @media (--viewport-md-min) {
+      margin-bottom: 50px;
+      padding-right: var(--container-spacing);
+      padding-left: var(--container-spacing);
+      text-align: center;
+
+      &-headline {
+        font-size: var(--base-font-size-xxxxlarge);
+        line-height: 1.1;
+        margin-bottom: 24px;
+      }
+
+      &-description {
+        font-size: var(--base-font-size-large);
+      }
+    }
+  }
+
+  &__item {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 44px;
+    padding-right: var(--container-spacing-mobile);
+    padding-left: var(--container-spacing-mobile);
+
+    @media (--viewport-md-min) {
+      flex: 1 0 0%;
+      width: 100%;
+      max-width: 100%;
+      margin-bottom: 0;
       padding-right: var(--container-spacing);
       padding-left: var(--container-spacing);
     }
@@ -155,5 +182,9 @@
 }
 
 .inspiration-overview__item-link + .inspiration-overview__list-links {
-  margin-top: 44px;
+  margin-top: 24px;
+
+  @media (--viewport-md-min) {
+    margin-top: 44px;
+  }
 }
