--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
@@ -6,8 +6,8 @@
 
     @media (--viewport-md-min) {
       margin-bottom: 50px;
-      padding-right: var(--container-spacing);
-      padding-left: var(--container-spacing);
+      padding-right: 5%;
+      padding-left: 5%;
       text-align: center;
 
       &-headline {
