--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/twig/03-organisms/hero.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/twig/03-organisms/hero.twig
@@ -1,10 +1,12 @@
 {{ attach_library('sis/hero') }}
 
-{% set hero_position = {
-  'hero--center': 'col-xs-10 col-md-8 col-xs-offset-1 col-md-offset-2',
-  'hero--right': 'col-xs-10 col-md-8 col-xs-offset-2 col-md-offset-4',
-  'hero--left': 'col-xs-10 col-md-8'
-} %}
+{% if position == 'hero--center' %}
+  {% set hero_position = 'col-xs-10 col-md-8 col-xs-offset-1 col-md-offset-2' %}
+{% elseif position == 'hero--right' %}
+  {% set hero_position = 'col-xs-10 col-md-8 col-xs-offset-2 col-md-offset-4' %}
+{% elseif position == 'hero--left' %}
+  {% set hero_position = 'col-xs-10 col-md-8' %}
+{% endif %}
 
 <div{{ attributes.addClass(['hero', 'js-hero']).addClass(media_image ? 'hero--image-added' : 'hero--narrow-height').addClass(dynamic_height ? 'hero--dynamic-height' : '') }}>
   {% if media_image %}
@@ -19,7 +21,7 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="{{ hero_position[position] }}">
+      <div class="{{ hero_position }}">
         <div class="hero__content">
           {% if title %}
             <h1>{{ title }}</h1>
