--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/accordion.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/accordion.css
@@ -74,7 +74,7 @@
       border-top: 0;
       border-left: 0;
       transform: rotate(45deg);
-      transition: transform .2s;
+      transition: transform .2s, margin-top .2s;
       content: "";
     }
   }
