SIS2-23: Changes to button ghost styling

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/theme/theme.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/theme/theme.css
@@ -18,7 +18,7 @@
     &--ghost {
       color: var(--theme-color);
       background-color: transparent;
-      border-color: var(--theme-button-background-color);
+      border-color: var(--theme-color);
     }
   }
 
