SIS2-21: Added styling and theming to small appetizer

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/theme/theme.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/theme/theme.css
@@ -3,7 +3,9 @@
  * Global theme styling.
  */
 
-.section.theme {
+.section.theme,
+.appetiser.theme,
+.appetiser.theme.layout-builder-block {
   color: var(--theme-color);
   background-color: var(--theme-background-color);
 
