SIS2-17: Added styling to footer bottom links

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/footer.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/footer.css
@@ -30,6 +30,11 @@
       align-self: center;
     }
 
+    &-address,
+    &-links {
+      padding-top: 10px;
+    }
+
     &-logo {
       .logo__image {
         height: 41px;
