SIS2-199: Added Lexicon functionality

--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_almanac/templates/almanacs.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_almanac/templates/almanacs.html.twig
@@ -1,5 +1,10 @@
 <ul class="almanac__list">
   {% for almanac in almanacs %}
-    <li>{{ almanac }}</li>
+    {%
+      set classes = [
+        almanac['#active'] ? 'almanac--active'
+      ]
+    %}
+    <li{{ attributes.addClass(classes) }}>{{ almanac }}</li>
   {% endfor %}
 </ul>
