--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_almanac/templates/almanacs.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_almanac/templates/almanacs.html.twig
@@ -1,10 +1,22 @@
+{{ attach_library('sis_almanac/sis_almanac') }}
 <ul class="almanac__list">
   {% for almanac in almanacs %}
     {%
       set classes = [
-        almanac['#active'] ? 'almanac--active'
+        'almanac__list-item',
+        almanac['#active'] ? 'almanac__list-item--active'
       ]
     %}
     <li{{ attributes.addClass(classes) }}>{{ almanac }}</li>
   {% endfor %}
 </ul>
+<div class="almanac__list-navigation">
+  <a class="almanac__list-navigation-left js-almanac__list-navigation-left">
+    <span class="almanac__list-navigation-arrow almanac__list-navigation-arrow--left"></span>
+    <span class="almanac__list-navigation-text">Forrige</span>
+  </a>
+  <a class="almanac__list-navigation-right js-almanac__list-navigation-right">
+    <span class="almanac__list-navigation-text">Næste</span>
+    <span class="almanac__list-navigation-arrow almanac__list-navigation-arrow--right"></span>
+  </a>
+</div>
