--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_almanac/templates/almanac.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_almanac/templates/almanac.html.twig
@@ -1,2 +1,2 @@
-<h3>{{ date }}</h3>
-<div class="almanac_content">{{ content }}</div>
+<div class="almanac__list-item-title">{{ date }}</div>
+<div class="almanac__list-item-content">{{ content }}</div>
