--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/layout/page.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/layout/page.html.twig
@@ -102,6 +102,7 @@
             <div class="col-xs-12 col-md-3">
             </div>
             <div class="col-xs-12 col-md-3">
+              <h4>Almanak</h4>
               {{ almanac }}
             </div>
             <div class="col-xs-12 col-md-3">
