SIS2-54: Style changes to Almanac footer block

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/footer.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/footer.css
@@ -17,6 +17,14 @@
     position: relative;
   }
 
+  .almanac__list-navigation-arrow {
+    background-color: var(--color-pink);
+
+    &::after {
+      border-color: var(--color-purple);
+    }
+  }
+
   &__bottom {
     position: relative;
     padding-top: 24px;
