SIS2-199: Added lexicon overview block

--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_lexicon/templates/lexicon.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_lexicon/templates/lexicon.html.twig
@@ -1,3 +1,7 @@
 <div id="lexicon-items" class="lexicon__items">
   {{ articles }}
 </div>
+
+{% if load_more %}
+  <a href="{{ path('sis_lexicon.get_articles', {'letter': letter, 'limit': 0, 'page': 0}) }}" class="use-ajax">{{ 'Show all lexicon articles with the letter @letter'|t({'@letter': letter}) }}</a>
+{% endif %}
